fixed alignment issues and icon sizes reduced slightly

--- a/app/assets/stylesheets/components/status_progress_bar.scss
+++ b/app/assets/stylesheets/components/status_progress_bar.scss
@@ -66,6 +66,9 @@
 }
 @media (min-width: 1300px) {
   .status-progress-item.active:after {
+    left: -50%;
+  }
+  .status-progress-item.active:before {
     left: 44%;
   }
   .status-progress-item:after {
