--- a/app/assets/stylesheets/pages/_user_status.scss
+++ b/app/assets/stylesheets/pages/_user_status.scss
@@ -43,7 +43,7 @@
     height: 75px;
   }
   .improve-score-icon {
-    max-width: 100px;
+    max-width: 90px;
   }
   .medal {
     max-height: 100px;
